<resources>
    <string name="app_name">ExampleRestApiProject</string>
    <string name="nav_header_title">Иван Петров</string>
    <string name="nav_header_subtitle">\@petrow</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_quotes">Цитаты</string>
    <string name="menu_products">Продукты</string>
    <string name="menu_settings">Настройки</string>
    <string name="author_hint">Автор</string>
    <string name="text_quotes_hint">Цитата</string>
    <string name="title_product_hint">Название</string>
    <string name="price_product_hint">Цена</string>
    <string name="description_product_hint">Описание</string>
    <string name="menu_management">Управление</string>
    <string name="url_server_header">Адрес URL сервера</string>
    <string name="url_server_setting">Настройки адреса сервера ...</string>
    <string name="url_connection_header">Проверка соединения</string>
    <string name="check_button">ПРОВЕРКА</string>
    <string name="result_connection_check">Результаты проверки</string>
    <string name="https_codes">Справка</string>
    <string name="button_update_setting">ОБНОВИТЬ URL СЕРВЕРА</string>
</resources>