<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quotes">

    <fragment
        android:id="@+id/nav_quotes"
        android:name="com.msaggik.examplerestapiproject.view.fragments.QuotesFragment"
        android:label="@string/menu_quotes"
        tools:layout="@layout/fragment_quotes" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.msaggik.examplerestapiproject.view.fragments.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.msaggik.examplerestapiproject.view.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>