<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProduct"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#FBEEE1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/thumbnailProduct"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:clipToOutline="true"
            android:background="@drawable/shape_image"
            app:srcCompat="@drawable/ic_menu_products" />

        <TextView
            android:id="@+id/titleProduct"
            android:layout_width="160dp"
            android:layout_height="25dp"
            android:hint="@string/title_product_hint"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="#FF107B9C"
            android:textColorHint="#6896A5"
            android:layout_marginStart="90dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/priceProduct"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:hint="@string/price_product_hint"
            android:textStyle="normal"
            android:textSize="17sp"
            android:textColor="#FF107B9C"
            android:textColorHint="#6896A5"
            android:layout_marginStart="260dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/descriptionProduct"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_product_hint"
            android:textStyle="italic"
            android:textSize="17sp"
            android:textColor="#FF107B9C"
            android:textColorHint="#6896A5"
            android:layout_marginStart="90dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"/>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>