<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEEE1"
    tools:context=".view.activities.ProductActivity">

    <!--    экшен бар-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_margin="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleProductOne"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint="@string/title_product_hint"
                android:textColor="#FF107B9C"
                android:textColorHint="#6896A5"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceProductOne"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:hint="@string/price_product_hint"
                android:textColor="#FF107B9C"
                android:textColorHint="#6896A5"
                android:textSize="19sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageProductOne"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_image_one"
                android:clipToOutline="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ic_menu_products" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/descriptionProductOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:hint="@string/description_product_hint"
        android:textColor="#FF107B9C"
        android:textColorHint="#6896A5"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>